--- a/assets/index.html
+++ b/assets/index.html
@@ -18,7 +18,7 @@
       }
 
       canvas {
-        border: 1px solid white;
+        border: 1px solid rgb(90, 13, 13);
       }
     </style>
   </head>
